Members shield alignment fixed (#11700)

--- a/res/css/views/rooms/_E2EIcon.pcss
+++ b/res/css/views/rooms/_E2EIcon.pcss
@@ -50,6 +50,7 @@ limitations under the License.
 .mx_E2EIcon_bordered {
     mask-image: url("$(res)/img/e2e/normal.svg");
     background-color: $header-panel-bg-color;
+    mask-size: 100%;
 
     /* shrink the actual badge */
     &::after {
